# MCS3

./: .gitignore  CMakeLists.txt  CdkConfig.cmake  Doxyfile  README.md
src/: main.c  main.h
src/Client/: client.c  client.h  client_serv.c
src/Protocole/: CMakeLists.txt  protocole.c  protocole.h
src/Protocole/Reponses/: reponses.c  reponses.h
src/Protocole/Requetes/: requetes.c  requetes.h
src/Reseau/: CMakeLists.txt  reseau.c  reseau.h
src/Serveur Central/: CMakeLists.txt  accees_fichiers.c  common.h  fichiers_infos.c  fichiers_infos.h  serveur_central.c  serveur_central.h
src/Utilitaires/: CMakeLists.txt  clock.c  clock.h  signaux.c  signaux.h  utils.h
tests/: CMakeLists.txt  src_protocole_protocole.c  src_protocole_reponses_reponses.c  src_protocole_requetes_requetes.c  test_utils.h
tests/TEST_COMMUNICATION/: main_1  main_2  main_3  main_4  main_v1  main_v1.c  main_v2.c  main_v3.c  main_v4.c  stream.h
